WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
299164
REGRESSION (iOS 26): MediaRecorder produces corrupted video/audio files, resulting in some loss of content
https://bugs.webkit.org/show_bug.cgi?id=299164
Summary
REGRESSION (iOS 26): MediaRecorder produces corrupted video/audio files, resu...
liuyun
Reported
2025-09-19 02:18:58 PDT
Hello WebKit Team, We are writing to report a critical regression in the MediaRecorder API behavior observed in the iOS 26 beta. This issue is causing critical failures in our application, as well as in several other third-party libraries we have tested. After recording audio or video, the playback duration is significantly shorter than expected. For instance, a one-minute recording might only have 20 seconds captured correctly, with the remaining 40 seconds of content being lost. We are unsure how to resolve this problem and would appreciate your confirmation and guidance. Thank you.
Attachments
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2025-09-19 19:08:06 PDT
Thank you for the report! Could you please provide more information to make it actionable? E.g. - whether this reproduces with iOS 26 release; - a URL and steps for us to reproduce this; - which hardware models you have seen this with.
Radar WebKit Bug Importer
Comment 2
2025-09-19 19:08:12 PDT
<
rdar://problem/160982017
>
liuyun
Comment 3
2025-09-21 19:57:07 PDT
Thank you for your reply. -Yes, this issue occurs in iOS 26 release. -I've provided a URL that demonstrates the problem: <
https://addpipe.com/media-recorder-api-demo-audio
> when you click on the video at this URL, the resulting MP4 file, which should be one minute long, only has 29 seconds of footage. -I encountered this issue on my iPhone 13 Pro. I haven't observed this problem on Android devices or another versions of iOS (18). Thank you.
Jer Noble
Comment 4
2025-09-25 15:45:13 PDT
Is this unique to MP4 or does it happen when recording in WebM as well?
liuyun
Comment 5
2025-09-25 18:13:35 PDT
Thanks for your reply. -Yes, I've only found issues with MP4. I've tested WebM and found no issues. It's recording in WebM fine. Thank you!
Jer Noble
Comment 6
2025-09-26 09:51:48 PDT
It looks like this is not unique to iOS; I can reproduce the same problem on macOS Safari 26, and only when the output file is .mp4.
Jer Noble
Comment 7
2025-09-26 09:52:25 PDT
It also looks like it's the _end_ of the recording that's missing. A 30 second recording where I'm just listing numbers from 1-30 will cut off at around 15.
Jean-Yves Avenard [:jya]
Comment 8
2025-09-30 15:08:27 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/51596
EWS
Comment 9
2025-10-01 05:52:55 PDT
Committed
300824@main
(812a4cd88295): <
https://commits.webkit.org/300824@main
> Reviewed commits have been landed. Closing PR #51596 and removing active labels.
liuyun
Comment 10
2025-10-16 19:15:05 PDT
Hello WebKit Team, Thank you for your prompt reply. It seems the issues mentioned above have been fixed, is that correct? I haven't seen an iOS version update yet. May I ask when this fix is approximately scheduled for release? Thank you.
Axel
Comment 11
2025-11-18 02:05:52 PST
Hello WebKit Team We are still encountering this issue on iOS 26.1: when using the MediaRecorder API, only the first 20–30 seconds of the recording are present in the final file. The behavior matches the original report for this bug. I have not seen any reference to the associated fix in the release notes for iOS 26.1 or for the iOS 26.2 Beta 3 builds. Could you provide any information on whether the fix has been included in the 26.x branch, or when it is expected to ship? Thanks for looking into this
Alexey Proskuryakov
Comment 12
2025-11-18 09:46:54 PST
Thank you for the follow up, this should be fixed in 26.2 beta 3 (probably earlier betas too).
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug